# arbor-dominii

./: .gitignore  .~lock.founder_natural.tsv#  Dockerfile  Dockerfile_persistent  README.md  compose.yml  config.json  impute_test.py  main.py  preprocess.py  pyproject.toml  test.py  Рабочий ноутбук Севы.ipynb
app/common/: checks.py  config.py  holder.py  impute.py  matrix.py  postprocess.py  preprocess.py  structure.py
app/configs/: black_jack_and_horse.json  crazy.json  default.json  local.json  test.json
app/gui/: Spawner.py
app/test_data/raw/: company.tsv  founder_legal.tsv  founder_natural.tsv
common/: holder.py
processed/: .~lock.company.tsv#  .~lock.founder_legal.tsv#  founder_legal.tsv
